<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thumper_drive</name>
  <version>0.0.0</version>
  <description>The Node that manages driving the thumper</description>
  <maintainer email="nico.dewitte@vives.be">Nico De Witte</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>trex_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
